# SSmokeDet

./: README.md  setup.cfg  setup.py
SSmokeNet/core/: launch.py  trainer.py
SSmokeNet/data/: __init__.py  data_augment.py  dataloading.py  samplers.py
SSmokeNet/data/datasets/: coco.py  coco_classes.py  mosaicdetection.py  voc.py
SSmokeNet/evaluators/: coco_evaluator.py  voc_evaluator.py
SSmokeNet/exp/: __init__.py  base_exp.py  build.py  ssmokenet.py
SSmokeNet/layers/: fast_coco_eval_api.py
SSmokeNet/models/: __init__.py  backbone.py  darknet.py  head.py  losses.py  network_blocks.py  ssmokenet.py
SSmokeNet/utils/: lr_scheduler.py  model_utils.py  visualize.py
demo/MegEngine/cpp/: README.md  build.sh  yolox.cpp
demo/MegEngine/python/: README.md  build.py  demo.py  dump.py
demo/ONNXRuntime/: README.md  onnx_inference.py
demo/OpenVINO/: README.md
demo/OpenVINO/cpp/: CMakeLists.txt  README.md  yolox_openvino.cpp
demo/OpenVINO/python/: README.md  openvino_inference.py
demo/TensorRT/cpp/: CMakeLists.txt  README.md  yolox.cpp
demo/TensorRT/python/: README.md
demo/ncnn/android/: README.md
demo/ncnn/android/app/src/main/jni/: CMakeLists.txt  yoloXncnn_jni.cpp
exps/default/: ssmokenet.py
tools/: demo.py  eval.py  export_onnx.py  export_torchscript.py  train.py  trt.py
utils/: activations.py  augmentations.py  autoanchor.py  callbacks copy.py  callbacks.py  datasets.py  loss.py  torch_utils.py
utils/aws/: resume.py
utils/flask_rest_api/: restapi.py
utils/google_app_engine/: app.yaml
utils/loggers/: __init__.py
(+12 files in other folders)
